--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -118,7 +118,7 @@ fr-FR:
         sequences: 'Séquences'
         title: 'Bonjour, {{user}}'
         tools: 'Outils'
-        units: "Unités de mesure"
+        units: 'Unités de mesure'
         user_statistics: 'Mes statistiques'
         users: 'Utilisateurs'
       listing_create:
@@ -128,22 +128,22 @@ fr-FR:
       listing_mail:
         are_you_sure_to_send_mails: 'Êtes-vous sûr(e) de vouloir envoyer les mails ?'
         attachment: 'Pièce jointe'
+        available_columns: 'Champs disponibles : {{columns}}'
+        body: 'Corps du message'
         choose_mail_column: 'Veuillez choisir la colonne à utiliser pour le mailing'
         click_to_mail: 'Cliquez ici pour écrire votre message'
-        personalized_mail: 'Envoyer un mail personnalisé'
-        available_columns: 'Champs disponibles : {{columns}}'
+        default_subject: '[{{company}}]'
+        from: 'Expéditeur'
         mails:
-          zero: 'Aucun e-mail'
           one: '1 e-mail'
           other: '{{count}} e-mails'
-        from: Expéditeur
-        default_subject: '[{{company}}]'
-        subject: Sujet
-        body: Corps du message
-        send: Envoyer le mail
-        send_test: Envoyer un mail de test
+          zero: 'Aucun e-mail'
+        personalized_mail: 'Envoyer un mail personnalisé'
+        send: 'Envoyer le mail'
+        send_test: 'Envoyer un mail de test'
+        subject: 'Sujet'
         title: 'Envoyer un mail pour "{{listing}}"'
-      listing_nodes: 
+      listing_nodes:
         title: 'Choisissez les informations à extraire'
       listing_update:
         data_to_extract: 'Données à extraire'
@@ -180,14 +180,14 @@ fr-FR:
         sequence_create: 'Ajouter une séquence'
         sequences_load: 'Charger les séquences manquantes'
         title: 'Liste des séquences'
-      units:
-        title: 'Unités de mesure'
-        unit_create: 'Ajouter une nouvelle unité de mesure'
-        units_load: 'Charger les unités de base manquantes'
       unit_create:
         title: 'Ajout d''une nouvelle unité de mesure'
       unit_update:
         title: 'Modification de l''unité {{label}}'
+      units:
+        title: 'Unités de mesure'
+        unit_create: 'Ajouter une nouvelle unité de mesure'
+        units_load: 'Charger les unités de base manquantes'
       user:
         change_password: 'Changer de mot de passe'
         title: 'Informations sur l''utilisateur : {{value}}'
