--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1140,7 +1140,7 @@ fr-FR:
         subscription_quantity: 'Quantité'
         supply_method: 'Moyen d''approvisionnement'
         to: 'Pour'
-        to_produce: 'Produit récolté'
+        to_produce: 'Produit fabriqué ou récolté'
         to_purchase: 'Produit acheté'
         to_rent: 'Produit loué'
         to_sale: 'Produit vendu'
@@ -1199,10 +1199,10 @@ fr-FR:
         location_id: 'Lieu de stockage'
         lock_version: 'Version'
         moved_on: 'Fait le'
-        planned_on: (((PLANNED_ON)))
+        planned_on: Prévu le
         product_id: 'Produit'
         quantity: 'Quantité'
-        shape_id: (((SHAPE_ID)))
+        shape_id: Parcelle
         tracking_id: 'Lot'
         tracking_serial: 'Numéro de lot'
         updated_at: 'Mis à jour le'
