--- a/config/locales/fr-FR.pack.production.yml
+++ b/config/locales/fr-FR.pack.production.yml
@@ -31,7 +31,7 @@ fr-FR:
         title: 'Gestion de la production'
         tools: 'Matériel'
       production_create:
-        title: 'Créer une nouvelle production'
+        title: 'Enregistrer une nouvelle production'
       _production_form:
         infos: 'Renseignez les caractéristiques de la production'
         production_legend_one: ' mp : matières premières'
