Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1385 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1768,7 +1768,7 @@ fr-FR:
         profession_id: 'Profession'
         reduction_percent: 'Taux de réduction autorisé (%)'
         rights: 'Droits'
-        role_id: 'À partir du rôle'
+        role_id: 'Rôle de base'
         salt: 'Sel'
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
