--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -42,6 +42,7 @@ fr-FR:
     manage_invoicing: 'Gérer la facturation et les règlements'
     manage_journals: 'Gérer les journaux'
     manage_listings: 'Gérer les extractions'
+    manage_locations: 'Gérer les lieux de stockage'
     manage_mandates: 'Gérer les responsabilités'
     manage_observations: 'Gérer les observations'
     manage_operations: 'Gérer les travaux'
@@ -53,7 +54,6 @@ fr-FR:
     manage_shapes: 'Gérer les îlots'
     manage_shelves: 'Gérer les catégories de produits'
     manage_statements: 'Pointage des relevés de comptes'
-    manage_stock_locations: 'Gérer les lieux de stockage'
     manage_stock_moves: 'Gérer les mouvements de stocks'
     manage_subscriptions: 'Gérer les abonnements'
     manage_taxes: 'Gérer les taxes'
