Add better sequence insertion, add unit support
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1390 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1521,14 +1521,14 @@ fr-FR:
         creator_id: 'Créateur'
         executed: 'Réalisé'
         id: 'ID'
-        location_id: 'Sortie du lieu de stockage'
+        location_id: 'Lieu de stockage de départ'
         lock_version: 'Version'
         moved_on: 'Fait le'
         nature: 'Type'
         planned_on: 'Prévu le'
         product_id: 'Produit'
         quantity: 'Quantité'
-        second_location_id: 'Entrée du lieu de stockage'
+        second_location_id: 'Lieu de stockage d''arrivée'
         text_nature: 'Type'
         tracking_id: 'Lot'
         unit_id: 'Unité'
